<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>Halcyon Project</name>
    <groupId>com.ebremer.HalcyonProject</groupId>
    <artifactId>HalcyonProject</artifactId>
    <packaging>pom</packaging>
    <version>1.1.0</version>
    <description>A whole slide image annotation, management, and visualization system</description>
    
    <modules>
        <module>jena-permissions</module>
        <module>halcyon-core</module>
        <module>Halcyon</module>
    </modules>
    
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    
    <issueManagement>
        <system>github</system>
        <url>https://github.com/halcyon-project/Halcyon/issues</url>
    </issueManagement>
    
    <developers>
        <developer>
          <id>ebremer</id>
          <name>Erich Bremer</name>
          <email>erich.bremer@stonybrook.edu</email>
          <roles>
              <role>architect</role>
              <role>developer</role>
          </roles>
          <timezone>America/New_York</timezone>
          <url>http://www.ebremer.com</url>
          <organization>Stony Brook University - Biomedical Informatics</organization>
        </developer>
        <developer>
          <id>tdiprima</id>
          <name>Tammy DiPrima</name>
          <email>tammy.diprima@stonybrook.edu</email>
          <roles>
              <role>developer</role>
          </roles>
          <timezone>America/New_York</timezone>
          <url>https://bmi.stonybrookmedicine.edu/people/Tammy_DiPrima</url>
          <organization>Stony Brook University - Biomedical Informatics</organization>
        </developer>
        <developer>
          <id>jbalsamo</id>
          <name>Joseph Balsamo</name>
          <email>joseph.balsamo@stonybrook.edu</email>
          <roles>
              <role>developer</role>
          </roles>
          <timezone>America/New_York</timezone>
          <organization>Stony Brook University - Biomedical Informatics</organization>
        </developer>
        <developer>
          <id>fwang</id>
          <name>Feiqiao Wang</name>
          <email>feiqiao.wang@stonybrook.edu</email>
          <roles>
              <role>developer</role>
          </roles>
          <timezone>America/New_York</timezone>
          <organization>Stony Brook University - Biomedical Informatics</organization>
        </developer>
    </developers>
    
    <organization>
        <name>Stony Brook University - Biomedical Informatics</name>
        <url>https://bmi.stonybrookmedicine.edu/</url>
    </organization>
    
    <inceptionYear>2021</inceptionYear>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>25</java.version>
        <maven.compiler.release>25</maven.compiler.release>
        <exec.longClasspath>true</exec.longClasspath>
        <springboot.version>4.1.0</springboot.version>
	<resteasy.version>6.2.15.Final</resteasy.version>
        <jetty.version>12.1.10</jetty.version>
        <jena.version>6.1.0</jena.version>
        <wicket.ver>10.9.1</wicket.ver>
        <beakgraph.version>0.17.0</beakgraph.version>
        <hilbert.ver>0.2.3</hilbert.ver>
        <commons-pool2.ver>2.13.1</commons-pool2.ver>
        <jakarta.json.version>2.1.3</jakarta.json.version> 
        <parrson.json.version>1.1.9</parrson.json.version>
        <titanium-json-ld.ver>1.7.0</titanium-json-ld.ver>
        <dcm4che.ver>5.34.3</dcm4che.ver>
        <dcm2rdf.version>1.4.0</dcm2rdf.version>
        <shiro.version>2.1.0</shiro.version>
        <jts.version>1.20.0</jts.version>
        <twelvemonkeys.version>3.13.1</twelvemonkeys.version>
        <cygnus.version>0.1.0-SNAPSHOT</cygnus.version>
        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
        <maven-shade-plugin.version>3.6.2</maven-shade-plugin.version>
        <maven-enforcer-plugin.version>3.6.3</maven-enforcer-plugin.version>
        <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
        <maven-dependency-plugin.version>3.7.0</maven-dependency-plugin.version>
        <native-maven-plugin.version>1.1.2</native-maven-plugin.version>
        <jpackage-maven-plugin.version>1.7.4</jpackage-maven-plugin.version>
        <jcommander.version>3.0</jcommander.version>
        <log4j-api.version>2.26.0</log4j-api.version>
        <commons-lang3.version>3.20.0</commons-lang3.version>
        <lombok.version>1.18.40</lombok.version>
        <caffeine.version>3.1.8</caffeine.version>
    </properties>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-pool2</artifactId>
                <version>${commons-pool2.ver}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.json</groupId>
                <artifactId>jakarta.json-api</artifactId>
                <version>${jakarta.json.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.parsson</groupId>
                <artifactId>parsson</artifactId>
                <version>${parrson.json.version}</version>
            </dependency>            
            <dependency>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>${native-maven-plugin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven-enforcer-plugin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${springboot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>            
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>apache-jena-libs</artifactId>
                <version>${jena.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>jena-querybuilder</artifactId>
                <version>${jena.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <!-- In-house fork (module jena-permissions/): upstream
                     deprecated the module and removed it in Jena 6.x. -->
                <groupId>com.ebremer.HalcyonProject</groupId>
                <artifactId>jena-permissions</artifactId>
                <type>jar</type>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>jena-fuseki-main</artifactId>
                <version>${jena.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.twelvemonkeys.imageio</groupId>
                <artifactId>imageio-tiff</artifactId>
                <version>${twelvemonkeys.version}</version>
            </dependency>
            <dependency>
                <groupId>com.twelvemonkeys.imageio</groupId>
                <artifactId>imageio-psd</artifactId>
                <version>${twelvemonkeys.version}</version>
            </dependency>
            <!-- dcm4che: DICOM parsing + ImageIO plugin for JPEG2000 WSI tiles.
                 dcm4che-imageio-opencv pulls the native OpenCV codec
                 (org.weasis.core:weasis-core-img) transitively. -->
            <dependency>
                <groupId>org.dcm4che</groupId>
                <artifactId>dcm4che-core</artifactId>
                <version>${dcm4che.ver}</version>
            </dependency>
            <dependency>
                <groupId>org.dcm4che</groupId>
                <artifactId>dcm4che-dict</artifactId>
                <version>${dcm4che.ver}</version>
            </dependency>
            <dependency>
                <groupId>org.dcm4che</groupId>
                <artifactId>dcm4che-image</artifactId>
                <version>${dcm4che.ver}</version>
            </dependency>
            <dependency>
                <groupId>org.dcm4che</groupId>
                <artifactId>dcm4che-imageio</artifactId>
                <version>${dcm4che.ver}</version>
            </dependency>
            <dependency>
                <groupId>org.dcm4che</groupId>
                <artifactId>dcm4che-imageio-opencv</artifactId>
                <version>${dcm4che.ver}</version>
            </dependency>
            <dependency>
                <groupId>com.ebremer</groupId>
                <artifactId>dcm2rdf</artifactId>
                <version>${dcm2rdf.version}</version>
            </dependency>
            <!-- cygnus: ImageIO plug-ins for whole-slide and codec formats.
                 svs and ndpi expose a slide's pyramid as ImageIO image indices
                 and read regions through ImageReadParam, the same contract the
                 TIFF reader is driven by. svs pulls jpeg2000 in for Aperio's
                 private JPEG 2000 tiles, so that codec's ImageIO plug-in is
                 registered alongside dcm4che's native one. -->
            <dependency>
                <groupId>com.ebremer</groupId>
                <artifactId>svs</artifactId>
                <version>${cygnus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ebremer</groupId>
                <artifactId>ndpi</artifactId>
                <version>${cygnus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ebremer</groupId>
                <artifactId>jpeg2000</artifactId>
                <version>${cygnus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ebremer</groupId>
                <artifactId>jpegxl</artifactId>
                <version>${cygnus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.apicatalog</groupId>
                <artifactId>titanium-json-ld</artifactId>
                <version>${titanium-json-ld.ver}</version>
            </dependency>
            <dependency>
                <groupId>com.ebremer</groupId>
                <artifactId>BeakGraph</artifactId>
                <version>${beakgraph.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.apicatalog</groupId>
                        <artifactId>titanium-json-ld</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.locationtech.jts</groupId>
                <artifactId>jts-core</artifactId>
                <version>${jts.version}</version>
            </dependency>
             <dependency>
                <groupId>org.jcommander</groupId>
                <artifactId>jcommander</artifactId>
                <version>${jcommander.version}</version>
            </dependency>            
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-server</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-io</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-util</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-security</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-http</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-xml</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-client</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-alpn-client</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <!-- The ee11 servlet environment: Fuseki 6.x and Spring
                     Boot 4's Jetty layer are both ee11, and Halcyon's
                     Fuseki/LWS wiring (SPARQLEndPoint, LWSServer) uses its
                     classes directly. -->
                <groupId>org.eclipse.jetty.ee11</groupId>
                <artifactId>jetty-ee11-servlet</artifactId>
                <version>${jetty.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <repositories>
        <repository>
          <id>halcyon</id>
            <name>Halcyon</name>
            <url>https://cursus.bmi.stonybrookmedicine.edu/releases</url>
        </repository>
        <repository>
            <id>dcm4che</id>
            <name>dcm4che Repository</name>
            <url>https://www.dcm4che.org/maven2</url>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>halcyon</id>
            <url>https://cursus.bmi.stonybrookmedicine.edu/releases</url>
        </repository>
    </distributionManagement>
        <build>
        <!--<finalName>library-${project.version}</finalName>-->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin.version}</version>
                <executions>
                    <execution>
                        <id>libraryshade</id>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"></transformer>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <manifestEntries>
                                        <Multi-Release>true</Multi-Release>
                                    </manifestEntries>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>false</skip>
                </configuration>
                <version>${maven-deploy-plugin.version}</version>
            </plugin>
        </plugins>
    </build>
</project>
